# adt-to-fhir

./: .gitignore  .releaserc.json  Cargo.toml  Dockerfile  README.md  app.yaml
.github/workflows/: build.yaml  lint.yml  mega-linter.yml  release.yaml
deploy/: InfoStation.json  compose.yml
dev/: adt-example.hl7  adt-to-fhir-dashboard.json  compose.yaml  dashboards-provisioning.yaml  otel-collector-config.yaml
resources/: InfoByAbteilungskuerzel.json  InfoByKostenstelle.json  InfoStation.json
resources/mapping/: Fachabteilungsschluessel-erweitert.json  InfoByAbteilungskuerzel.json  InfoStation.json
resources/test/: a01_test.hl7  a02_test.hl7  a03_test.hl7  a04_test.hl7  a04_test2.hl7  a05_ns_test.hl7  a06_teilsstationaer_test.hl7  a07_nachstationaer_test.hl7  a08_test.hl7  a11_test.hl7  a34_test.hl7  a38_test.hl7
src/: config.rs  error.rs  fhir.rs  main.rs  metrics.rs  processor.rs  test_utils.rs
src/fhir/: codes_systems.rs  encounter.rs  location.rs  mapper.rs  misc.rs  observation.rs  organization.rs  patient.rs  resources.rs  sharded_fhir_functions.rs  sharded_functions.rs  terminology.rs  test_utils.rs
src/hl7/: parser.rs
