[package]
name = "adt-to-fhir"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.39.0", features = ["ssl", "cmake-build", "curl-static"] }
tokio = { version = "1.50.0", features = ["full"] }
log = "0.4.29"
env_logger = "0.11.9"
futures = "0.3.32"
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
fhir-model = { version = "0.12.1", default-features = false, features = ["builders", "r4b"] }
hl7-parser = "0.3.0"
anyhow = "1.0.102"
thiserror = "2.0.18"
chrono = "0.4.44"
chrono-tz = "0.10.4"
regex = "1.12.3"

[dev-dependencies]
rstest = "0.26.1"
